--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/Zaimwa9/Totem#readme",
   "dependencies": {
-    "mongoose": "^4.9.8"
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
+    "mongoose": "^4.9.8",
+    "mongoose-field-encryption": "^1.0.0"
   }
 }
