--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/Zaimwa9/Totem#readme",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-validator": "^3.2.0",
     "mongoose": "^4.9.8",
     "mongoose-field-encryption": "^1.0.0"
   }
