--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "bcrypt": "^1.0.2",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-session": "^1.15.3",
     "express-validator": "^3.2.0",
     "mongoose": "^4.9.8",
-    "mongoose-field-encryption": "^1.0.0"
+    "mongoose-field-encryption": "^1.0.0",
+    "mongoose-session": "0.0.4"
   }
 }
