--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "express-fileupload": "^0.1.3",
     "express-session": "^1.15.3",
     "express-validator": "^3.2.0",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^19.0.0",
     "moment": "^2.18.1",
     "mongoose": "^4.9.8",
     "mongoose-field-encryption": "^1.0.0",
     "mongoose-session": "0.0.4",
+    "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1"
   }
