--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/Zaimwa9/Totem#readme",
   "dependencies": {
+    "async": "^2.5.0",
     "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.2",
+    "connect-mongo": "^1.3.2",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-fileupload": "^0.1.3",
@@ -25,6 +28,7 @@
     "express-validator": "^3.2.0",
     "google-auth-library": "^0.10.0",
     "googleapis": "^19.0.0",
+    "mailgun-js": "^0.11.2",
     "moment": "^2.18.1",
     "mongoose": "^4.9.8",
     "mongoose-field-encryption": "^1.0.0",
